--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="box__description-text">👻</div>
     </div>
     
-    <a href="https://youtube.com/zdripzz01" target="_blank" class="box__button">Dripzz</a>
+    <a href="https://www.dripzz.cf" target="_blank" class="box__button">Dripzz</a>
     
   </div>
   
